--- a/css/style.css
+++ b/css/style.css
@@ -19,20 +19,28 @@ body {
 	line-height: 1.5em;
 }
 #square {
+	display: flex;
     width: 550px;
-    height: 250px;
+    height: 260px;
     background: #add8e6;
 	margin-left: 35%;
 	border-radius: 10px 10px 10px 10px;
 	-moz-border-radius: 10px 10px 10px 10px;
 	-webkit-border-radius: 10px 10px 10px 10px;
 }
+img {    
+    margin-top: 7%;
+	margin-right: 1%;
+    margin-bottom: 24%;   
+    padding: 5%;
+}
 
 header {
 	font-size: 34px;
     font-family: 'Cormorant Infant';
     text-align: center;
-	margin-top: 15%;
+	margin-top: 12%;
+	margin-bottom: 2%;
 }
 
 a {
@@ -69,7 +77,7 @@ p {
 #login {
 	padding-top: 50px;
 	padding-left: 20px;
-	margin: 20px 50px 50px 50px;
+	margin: 5px 20px 20px 20px;
 	width: 350px;
 }
 
@@ -108,14 +116,15 @@ p {
 }
 
 #login form input[type="submit"] {
-	margin-left: 100%;
+	margin-left: 114%;
+	margin-bottom: 5em;	
 	border-radius: 10px;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	background-color: #039be5;
 	color: #eee;
 	font-weight: bold;
-	margin-bottom: 2em;
+	
 	/* text-transform: uppercase; */
 	cursor:pointer;
 	width: 100px;
